--- a/style.css
+++ b/style.css
@@ -23,9 +23,7 @@ ul{
     text-align: center;
     width:95%;
 }
-#subtitulo{
-    background-color: black;
-    color: azure;
+#subtitulo{     
     margin: 0%;
     border:0px
 }
@@ -41,8 +39,23 @@ p{
     padding: 2%;
 }   
 div img {
-    margin-left: 100px;
-    width: 500px;
+    width: 100%;
 justify-content: center;
-align-items: center;
+}
+
+#icon{
+    width: 50px;
+}
+
+#iconytxt{
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    padding-left: 20%;
+}
+
+#button{
+    border-radius: 10%;
+    size: 150%;
+    width: max-content;
 }
