--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
   margin-top: 0%;
 }
 
-header{ 
+header{
     background-color: #8CDDB6;
     padding-bottom: 20px;
 }
@@ -13,7 +21,7 @@ h1{
     padding-top: 12px;
 }
 nav ul{
-    
+
 
 }
 
@@ -23,7 +31,7 @@ ul{
     text-align: center;
     width:95%;
 }
-#subtitulo{     
+#subtitulo{
     margin: 0%;
     border:0px
 }
@@ -37,10 +45,11 @@ h2{
 p{
     margin-top: 1%;
     padding: 2%;
-}   
+}
 div img {
-    width: 100%;
-justify-content: center;
+    width: 80%;
+ justify-content: center;
+ padding-left: 20%;
 }
 
 #icon{
@@ -55,7 +64,11 @@ justify-content: center;
 }
 
 #button{
-    border-radius: 10%;
+    border-radius: 12%;
     size: 150%;
     width: max-content;
+}
+
+ul{
+    margin: 1%;
 }
