--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 header{
     background-color: #8CDDB6;
     padding-bottom: 20px;
+    width: 100%;
 }
 h1{
     text-align: center;
@@ -27,27 +28,29 @@ ul{
 }
 #subtitulo{
     margin-top: 2%;
+    padding-bottom: 0%;
 }
 header nav ul button{
     border: 100%
 }
 h2{
-    margin:2%;
+    margin:1%;
+    margin-bottom: 0%;
 }
 
 p{
-    margin-top: 1%;
-    padding: 4%;
+    padding: 1.6%;
 
 }
 div img {
-    width: 80%;
+    width: 70%;
  justify-content: center;
- padding-left: 20%;
+ padding-left: 30%;
 }
 
 #icon{
-    width: 25%;
+    width: 35%;
+
 
 }
 
@@ -61,12 +64,21 @@ div img {
 #button{
     border-radius: 12%;
     size: 150%;
-    width: max-content;
 }
 
 ul{
     margin: 1%;
 }
 h4{
-    margin:2%
+    margin-bottom:2%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top:1%
+}
+
+#img{
+
+    width: 75%;
+ justify-content: center;
+ padding-left: 20%;
 }
