--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     margin: 0%;
   margin-top: 0%;
   min-height: 100vh;
+  color: black;
 }
 header{
     background-color: #8CDDB6;
@@ -19,11 +20,18 @@ nav ul{
     width: 100%;
     list-style: none;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
+}
+nav ul h1{
+    display: flex;
+    padding-right: 30%;
+
 }
 nav li{
     height: 50px;
+}
+.hideOnComputer{
+    display: none;
 }
 nav a {
     height:100%;
@@ -43,7 +51,7 @@ nav a:hover{
     height: 100vh;
     width: 250px;
     z-index: 999;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(202, 202, 202);
     backdrop-filter: blur(10px);
     box-shadow: -10px 0 10px rgba(0,0,0,0.1);
     display: none;
@@ -67,17 +75,25 @@ h1{
     display: block;
     text-align: center;
 }
+.dark{
+    display: flex;
+    align-items: center;
 
+}
+.light{
+    display: none;
+    align-items: center;
+}
 p{
     padding: 1%;
 }
 div img {
-    width: 70%;
+ width: 70%;
  justify-content: center;
  padding-left: 30%;
 }
 #icon{
-    width: 40%;
+ width: 40%;
 }
 #iconytxt{
     align-items:center;
@@ -95,5 +111,8 @@ div img {
 @media (max-width:800px) {
     .hideOnMobile{
         display: none;
+    }
+    .hideOnComputer{
+        display: flex;
     }
 }
