--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body{
   color: black;
 }
 header{
+    position: relative;
     background-color: #8CDDB6;
     margin-bottom: 1%;
 }
-
 nav ul{
     width: 100%;
     list-style: none;
@@ -41,8 +41,25 @@ nav a {
     align-items: center;
     color: black;
 }
+.logo{
+    display: flex;
+    justify-content: center;
+    padding: 10%;
+    height: 3rem;
+}
 nav a:hover{
     background-color: white;
+}
+.main-box{
+    padding: 2.5rem 2.5rem;
+    box-shadow: 10px 10px 10px rgba(72, 72, 72, 0.5);
+    background-color: #8CDDB6;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    max-width: 700px;
+    margin: 1rem auto 2rem;
 }
 .sidebar{
     position: fixed;
@@ -66,6 +83,7 @@ nav a:hover{
     width: 100%;
 }
 footer{
+    position: absolute;
     display: flex;
     flex-direction: row;
     background-color: #8CDDB6;
