--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body{
   color: black;
 }
 header{
-    position: relative;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
     background-color: #8CDDB6;
     margin-bottom: 1%;
 }
@@ -50,7 +53,7 @@ nav a {
 nav a:hover{
     background-color: white;
 }
-.main-box{
+.box{
     padding: 2.5rem 2.5rem;
     box-shadow: 10px 10px 10px rgba(72, 72, 72, 0.5);
     background-color: #8CDDB6;
@@ -131,6 +134,15 @@ div img {
         display: none;
     }
     .hideOnComputer{
-        display: flex;
+        display: block;
     }
+    .sidebar{
+        display: none;
+        flex-direction: column;
+    }
+    footer{
+        flex-direction: column;
+    }
+
+    
 }
