--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ nav a {
 nav a:hover{
     background-color: white;
 }
+.dark-mode nav a:hover {
+    background-color: black;
+    color: white;
+}
 .box{
     padding: 2.5rem 2.5rem;
     box-shadow: 10px 10px 10px rgba(72, 72, 72, 0.5);
@@ -140,9 +144,9 @@ div img {
         display: none;
         flex-direction: column;
     }
-    footer{
+    #divfoot{
         flex-direction: column;
-    }
+     }
 
     
 }
